# mirrored-PKIPCS

./: README.md
pcs-mcl-version/: Makefile  main.cpp  output.txt
pcs-mcl-version/dependencies/: README.txt
pcs-mcl-version/includes/: mcl
pcs-mcl-version/lib/work/: clone.sh
pcs-pbc-version/: Makefile  main.cpp  output.txt
pcs-pbc-version/dependencies/: README.txt
pcs-tepla-version/: Makefile.standalone  output.txt
pcs-tepla-version/dependencies/: README.txt  tepla-2.0-stonepine.tgz
pcs-tepla-version/src/certificates/pcs-store/: pcs-store-ca.cert.pem  pcs-store-ca.crl.pem  pcs-store-client.cert.pem  pcs-store-client.csr.pem  pcs-store-client.key.pem  pcs-store-component-ca-chain.cert.pem  pcs-store-component-ca-chain.crl.pem  pcs-store-component-ca.cert.pem  pcs-store-component-ca.crl.pem  pcs-store-identity-ca-chain.cert.pem  pcs-store-identity-ca-chain.crl.pem  pcs-store-identity-ca.cert.pem  pcs-store-identity-ca.crl.pem  pcs-store-network-ca-chain.cert.pem  pcs-store-network-ca-chain.crl.pem  pcs-store-network-ca.cert.pem  pcs-store-network-ca.crl.pem  pcs-store-server.cert.pem  pcs-store-server.csr.pem  pcs-store-server.key.pem
pcs-tepla-version/src/client/: main.cpp  pcsStore.client.config.xml  software.pcsStore.client.vcxproj
pcs-tepla-version/src/server/: main.cpp  pcsStore-certificateStore.server.config.xml  pcsStore.server.config.xml  software.pcsStore.server.vcxproj
pcs-tepla-version/src/xsd/: application.xsd  authentication.xsd  authorizedCertificate.xsd  certificate.xsd  client.xsd  databaseClient.xsd  pcsStore.xsd  server.xsd
pcs-tepla-version/standalone/: CMakeCache.txt  CMakeLists.txt  Makefile  abeTest  abeTestOutput.txt  cmake_install.cmake  log.txt  main.cpp  mainMcl.cpp  mainMcl.h  mainPcs.cpp  mainPcs.h  maindsds.cpp  mclUtilities.cpp  mclUtilities.h  pcsTest
pki-openssl-version/certificateStoreServer/: CMakeLists.txt  certificateStoreServer.cpp  certificateStoreServer.h  certificateStoreServerFromXml.cpp  certificateStoreServerFromXml.h
pki-openssl-version/database/: CMakeLists.txt  database.h  postgreSqlClient.cpp  postgreSqlClient.h  postgreSqlClient.odb.cpp  postgreSqlClientBase.odb.cpp
pki-openssl-version/parser/: CMakeLists.txt
pki-openssl-version/parser/bson/: baseToken.cpp  baseToken.h  bsonParser.cpp  bsonParser.h  config.h  logger.cpp  logger.h  main.cpp  x00Token.cpp  x00Token.h  x01Token.cpp  x01Token.h  x02Token.cpp  x02Token.h  x03Token.cpp  x03Token.h  x04Token.cpp  x04Token.h  x05Token.cpp  x05Token.h  x06Token.cpp  x06Token.h  x07Token.cpp  x07Token.h  x08Token.cpp  x08Token.h  x09Token.cpp  x09Token.h  x0AToken.cpp  x0AToken.h  x0BToken.cpp  x0BToken.h  x0CToken.cpp  x0CToken.h  x0DToken.cpp  x0DToken.h  x0EToken.cpp  x0EToken.h  x0FToken.cpp  x0FToken.h  (+10 more)
pki-openssl-version/parser/cpp/: parser.cpp  parser.h  test.cpp
pki-openssl-version/parser/xml/: xml3all.h
pki-openssl-version/transcode/: main.cpp
pki-openssl-version/utilities/: CMakeLists.txt  genericFromXml.cpp  genericFromXml.h  stonepine.utilities.boost.cpp  stonepine.utilities.boost.h  stonepine.utilities.dumpCore.cpp  stonepine.utilities.dumpCore.h  stonepine.utilities.iO.cpp  stonepine.utilities.iO.h  stonepine.utilities.math.cpp  stonepine.utilities.math.h  stonepine.utilities.regex.cpp  stonepine.utilities.regex.h  stonepine.utilities.time.cpp  stonepine.utilities.time.h  utilities.cpp  utilities.h  uuid.cpp  uuid.h
pki-openssl-version/utilities/security/: authentication.cpp  authentication.h  authorizedCertificates.cpp  authorizedCertificates.h  certificate.cpp  certificate.h
pki-openssl-version/utilities/xml/: applicationFromXml.h  authorizedCertificatesFromXml.codeSynthesis.cpp  authorizedCertificatesFromXml.cpp  authorizedCertificatesFromXml.h  certificates.cpp  certificates.h  utilities.xml.h
pki-openssl-version/worker/: worker.cpp  worker.h
